--- a/Proyecto TP/backend/docker-compose.yml
+++ b/Proyecto TP/backend/docker-compose.yml
@@ -5,6 +5,7 @@ services:
       - 5432:5432
     volumes:
       - ./.volumes/postgres/data:/var/lib/postgresql/data/
+      - ./scripts/db.sql:/docker-entrypoint-initdb.d/db.sql
     environment:
       - POSTGRES_PASSWORD=postgres
       - POSTGRES_USER=postgres
