Instalo dependencia cors

--- a/Proyecto TP/backend/package.json
+++ b/Proyecto TP/backend/package.json
@@ -9,6 +9,7 @@
   "author": "Grupo 404 Not Found",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^5.1.0",
     "pg": "^8.16.3"
   },
