Agregué más comandos al makefile para que sea más comodo. api.http para hacer más rápido las peticiones http. db.sql -> primero puse logs para saber que se ejecuta bien, luego solucioné el problema de que algunas tablas no se creaban, esto debido a que estaba mal el orden de creación de tablas.

--- a/Proyecto TP/Makefile
+++ b/Proyecto TP/Makefile
@@ -11,3 +11,21 @@ stop-db:
 
 install-backend:
 	cd ./backend && npm install
+
+reset-db:
+	cd ./backend && docker compose down
+	sudo rm -rf ./backend/.volumes/postgres/data/*
+	cd ./backend && docker compose up -d
+check-db:
+	docker exec -it backend-postgres-1 psql -U postgres -d atlas -c "SELECT * FROM alimentacion LIMIT 5;" -P pager=off
+
+recreate-db:
+	cd ./backend && docker compose down -v
+	cd ./backend && docker compose up -d
+
+reset-db-hard:
+	cd backend && docker compose down -v
+	cd backend && sudo rm -rf ./.volumes/postgres/data
+	cd backend && docker compose up -d
+	sleep 5
+	cd backend && docker exec -it backend-postgres-1 psql -U postgres -d atlas -c "SELECT * FROM grupo_muscular LIMIT 5;"
