--- a/Proyecto TP/backend/package.json
+++ b/Proyecto TP/backend/package.json
@@ -4,7 +4,8 @@
   "description": "Backend pagina fitnes Atlas+",
   "main": "src/api.js",
   "scripts": {
-    "dev": "nodemon src/api.js"
+    "dev": "nodemon src/api.js",
+    "start": "node src/api.js"
   },
   "author": "Grupo 404 Not Found",
   "license": "ISC",
